fix line break in group admin area, enlarged text, collapsable advanced options
Bug 1465107: Use Bootstrap CSS Framework

--- a/htdocs/theme/bootstrap/static/sass/components/_list-group.scss
+++ b/htdocs/theme/bootstrap/static/sass/components/_list-group.scss
@@ -11,6 +11,10 @@
         &.text-success {
              @extend .text-success;
         }
+        &.text-link {
+            @extend .text-link;
+        }
+
     }
     .panel-body & {
         margin-bottom: 0;
