--- a/htdocs/theme/bootstrap/static/sass/typography/_text.scss
+++ b/htdocs/theme/bootstrap/static/sass/typography/_text.scss
@@ -15,6 +15,10 @@
     color: #FE6500;
 }
 
+.text-link {
+	color: $link-color;
+}
+
 .text-watermark {
     @include text-shadow(0 1px 0 #fff);
     opacity: 0.3;
